ｊｓの読み込み漏れ

--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
 <html lang="en-us">
 <head>
+
 <script src="main.js"></script>
 <script src="opo.js"></script>
+<script src="config.js"></script>
+
+<!-- Include manifest file in the page -->
+<link rel="manifest" href="manifest.json">
 <meta charset="UTF-8">
 
 <title>Web-Push Test</title>
