--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 <!-- Include manifest file in the page -->
 <link rel="manifest" href="manifest.json">
+<link rel="website" href="website.json">
 <meta charset="UTF-8">
 
 <title>Web-Push Test</title>
